# common-data-usage-web-app

./: .eslintrc.json  .gitignore  README.md  backend.Dockerfile  compose.yml  frontend.Dockerfile  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
common_data_usage_backend/: db.py  main.py  router.py  sentry.py  settings.py
common_data_usage_backend/api/: data_organization.py  dataset.py  repository.py  search.py
common_data_usage_backend/graphs/: data_organization_datasets.py  dataset_resources_repos.py  graph_utils.py  repository_datasets_organizations.py
common_data_usage_backend/utils/: repository_id.py
src/app/: Providers.tsx  layout.tsx  page.tsx
src/app/ogd-portals/data-gov/: EntitiesSearchBox.tsx  page.tsx
src/app/ogd-portals/data-gov/data-organization/: OrgImage.tsx  page.tsx
src/app/ogd-portals/data-gov/data-organization/[orgId]/: page.tsx
src/app/ogd-portals/data-gov/dataset/[datasetId]/: page.tsx
src/app/ogd-portals/data-gov/repository/[encodedRepositoryId]/: page.tsx
src/components/: EntityLayout.tsx  GraphEmbed.tsx  GraphRenderer.tsx  TopFormatsChart.tsx
src/lib/: routes.ts
src/lib/api/: fetchData.ts  urls.ts
src/serverActions/: search.ts
